<resources>
    <string name="app_name">Firebase Login Authentication</string>
    <string name="str_congratulations_you_are_signed_in">Congratulations ! You are signed in</string>
    <string name="str_sign_out">Sign Out</string>
    <string name="str_create_account">Create Account</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm password</string>
    <string name="str_btn_create_account">Create Account</string>
    <string name="str_or">or</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_tv_sign_in">Sign In</string>
    <string name="str_sign_in_with_google">Sign In With Google</string>
    <string name="str_crash">Crash</string>
</resources>