<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateAccountActivity">


    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/str_create_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/str_email"
        app:layout_constraintTop_toBottomOf="@id/tv_create_account" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/str_password"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/str_confirm_password"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_btn_create_account"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_sign_in"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_or" />

    <Button
        android:id="@+id/btn_sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/str_sign_in_with_google"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />


    <Button
        android:id="@+id/btn_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/str_crash"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in_google" />



</androidx.constraintlayout.widget.ConstraintLayout>