<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInActivity">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/str_tv_sign_in"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in" />

    <EditText
        android:id="@+id/edt_sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/str_password"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@+id/edt_sign_in_email" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_sign_in"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edt_sign_in_password" />


    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signIn" />

    <Button
        android:id="@+id/btn_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_btn_create_account"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_or" />




</androidx.constraintlayout.widget.ConstraintLayout>